--- a/src/html/options-ui.html
+++ b/src/html/options-ui.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="../style/material-icons.css">
         <link rel="stylesheet" href="../style/options-ui.min.css">
         <script src="../script/browser-polyfill.min.js"></script>
+        <script src="../script/bootstrap.js"></script>
         <script src="../script/utils.js"></script>
         <script src="../script/options-ui.js"></script>
     </head>
