fix various issues
It looks like when I hoped on the develop branch, I encountered some
result of refactoring that was not complete yet. I may dress this up
later and send it to the author as a PR.

Some things of note:
I might have taken short cuts to establishing a version 3 payload.
- The @import comments seem to be completely ignored.
- Some error handling was introduced for more verbosity during an error.
- Iframes still don't work, because Security.

--- a/html/browser-action.html
+++ b/html/browser-action.html
@@ -10,9 +10,9 @@
         <link rel="stylesheet" href="../style/material-icons.css">
         <link rel="stylesheet" href="../style/browser-action.min.css">
 
-        <script src="../script/browser-polyfill.min.js"></script>
-        <script src="../script/vs/loader.js"></script>
-        <script src="../script/browser-action.js"></script>
+        <script src="../script/utils/utils.js"></script>
+        <script src="../script/modules/rules.js"></script>
+        <script src="../script/main/browser-action.js"></script>
     </head>
 	<body class="unselectable" data-loading="true">
         <div id="body">
@@ -171,4 +171,4 @@
         </template>
 
 	</body>
-</html> 
+</html>
