--- a/html/options-ui.html
+++ b/html/options-ui.html
@@ -7,10 +7,12 @@
         <meta name="author" content="L.Sabatelli">
         <link rel="stylesheet" href="../style/material-icons.css">
         <link rel="stylesheet" href="../style/options-ui.min.css">
-        <script src="../script/browser-polyfill.min.js"></script>
         <script src="../script/bootstrap.js"></script>
-        <script src="../script/utils.js"></script>
-        <script src="../script/options-ui.js"></script>
+        <script src="../script/utils/utils.js"></script>
+        <script src="../script/modules/rules.js"></script>
+        <script src="../script/modules/settings.js"></script>
+        <script src="../script/modules/tabs.js"></script>
+        <script src="../script/main/options-ui.js"></script>
     </head>
 	<body class="unselectable">
         <div id="body">
